[package]
name = "bitvmx-orchestrator"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
bitcoincore-rpc = "0.19.0"
config = "0.14.0"
console = "0.15.8"
serde = "1.0.204"
serde_json = "1.0.96"
thiserror = "1.0.63"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
ctrlc = "3.4"
hex = "0.4.3"
mockall = "0.13.0"

uuid = { version = "1.11.0", features = ["v4", "serde"] }

# BitVMX dependencies
rust-bitvmx-storage-backend = { path = "../rust-bitvmx-storage-backend" }
bitvmx-transaction-dispatcher = { path = "../rust-bitvmx-transaction-dispatcher" }
bitvmx-transaction-monitor = { path = "../rust-bitvmx-transaction-monitor" }
bitvmx-key-manager = { path = "../rust-bitvmx-key-manager" }
bitvmx-settings = { path = "../rust-bitvmx-settings" }
bitvmx-bitcoin-rpc = { path = "../rust-bitvmx-bitcoin-rpc" }

[dependencies.bitcoin]
version = "0.32.2"
features = ["rand-std", "serde"]

[dependencies.chrono]
version = "0.4.38"
features = ["serde"]

[dependencies.rand]
version = "0.8.5"
features = ["std", "std_rng"]
