[package]
name = "bitcoin-coordinator"
version = "0.1.1"
edition = "2021"
description = "A Rust-based project for transaction management and monitoring in the Bitvmx client."
keywords = ["bitcoin", "coordinator", "transaction", "monitoring"]
license = "MIT"
repository = "https://github.com/fairgateLabs/rust-bitcoin-coordinator"
readme = "README.md"

[dependencies]
anyhow = "1.0.86"
bitcoincore-rpc = "0.19.0"
config = "0.15.13"
console = "0.16.0"
serde = "1.0.204"
serde_json = "1.0.96"
thiserror = "2.0.12"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
ctrlc = "3.4"
hex = "0.4.3"
uuid = { version = "1.11.0", features = ["v4", "serde"] }

rust-bitvmx-storage-backend = { git = "https://github.com/FairgateLabs/rust-bitvmx-storage-backend.git", branch = "v.0.0.1" }
bitvmx-transaction-monitor = { git = "https://github.com/FairgateLabs/rust-bitvmx-transaction-monitor.git", branch = "v.0.0.1" }
bitvmx-key-manager = { git = "https://github.com/FairgateLabs/rust-bitvmx-key-manager.git", branch = "v.0.0.1" }
bitvmx-settings = { git = "https://github.com/FairgateLabs/rust-bitvmx-settings.git", branch = "v.0.0.1" }
bitvmx-bitcoin-rpc = { git = "https://github.com/FairgateLabs/rust-bitvmx-bitcoin-rpc.git", branch = "v.0.0.1" }
bitvmx-protocol-builder = { git = "https://github.com/FairgateLabs/rust-bitvmx-protocol-builder.git", branch = "v.0.0.1" }


[dependencies.bitcoin]
version = "0.32.2"
features = ["rand-std", "serde"]

[dependencies.chrono]
version = "0.4.38"
features = ["serde"]

[dependencies.rand]
version = "0.9.2"
features = ["std", "std_rng"]


[dev-dependencies]
bitcoind = { git = "https://github.com/FairgateLabs/rust-bitcoind.git", branch = "v.0.0.1" }
